--- a/helm/datadog/.kube-linter.yaml
+++ b/helm/datadog/.kube-linter.yaml
@@ -10,5 +10,6 @@ checks:
   - "no-liveness-probe"
   - "no-readiness-probe"
   - "sensitive-host-mounts"
+  - "writable-host-mount"
   # Chart dependency 'datadog-crds' defines a CRD using apiextensions.k8s.io/v1beta1
   - "no-extensions-v1beta"
