--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -1,4 +1,4 @@
-skip-steps: static_check, validate
+skip-steps: validate
 replace-chart-version-with-git: true
 generate-metadata: true
 chart-dir: ./helm/datadog
