--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -1,5 +1,6 @@
-skip-steps: validate
-skip-steps: static_check
+skip-steps: 
+  - validate
+  - static_check
 replace-chart-version-with-git: true
 generate-metadata: true
 chart-dir: ./helm/datadog
