--- a/helm/datadog/values.yaml
+++ b/helm/datadog/values.yaml
@@ -224,7 +224,7 @@ datadog:
     tlsVerify:  # false
     # datadog.kubelet.hostCAPath -- Path (on host) where the Kubelet CA certificate is stored
     # @default -- None (no mount from host)
-    hostCAPath:
+    hostCAPath: /var/lib/kubelet/pki/kubelet.crt
     # datadog.kubelet.agentCAPath -- Path (inside Agent containers) where the Kubelet CA certificate is stored
     # @default -- /var/run/host-kubelet-ca.crt if hostCAPath else /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     agentCAPath:
