--- a/helm/datadog/Chart.yaml
+++ b/helm/datadog/Chart.yaml
@@ -12,6 +12,10 @@ icon: https://s.giantswarm.io/app-icons/datadog/1/light.svg
 sources:
   - https://app.datadoghq.com/account/settings#agent/kubernetes
   - https://github.com/DataDog/datadog-agent
+dependencies:
+  - name: datadog
+    version: 2.37.6
+    repository: https://helm.datadoghq.com
 maintainers:
   - name: Datadog
     email: support@datadoghq.com
