--- a/.circleci/ct-config.yaml
+++ b/.circleci/ct-config.yaml
@@ -1,5 +1,3 @@
 ---
 chart-repos:
-- datadog-crds=https://helm.datadoghq.com
-- kube-state-metrics=https://kubernetes.github.io/kube-state-metrics
-- prometheus-community=https://prometheus-community.github.io/helm-charts
+- datadog=https://helm.datadoghq.com
