--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -4,5 +4,5 @@ replace-app-version-with-git: false
 generate-metadata: true
 destination: ./build
 catalog-base-url: https://giantswarm.github.io/giantswarm-playground-catalog/
-skip-steps: [validate, static_check]
+skip-steps: validate
 ct-config: ./.circleci/ct-config.yaml
