--- a/helm/datadog/Chart.yaml
+++ b/helm/datadog/Chart.yaml
@@ -1,15 +1,18 @@
-apiVersion: v1
+---
+apiVersion: v2
 name: datadog
 version: 2.5.0
-appVersion: "7"
+appVersion: 2.37.6
 description: Datadog Agent
+type: application
 keywords:
   - monitoring
   - alerting
   - metric
-home: https://www.datadoghq.com
+home: https://github.com/giantswarm/loki-app
 icon: https://s.giantswarm.io/app-icons/datadog/1/light.svg
 sources:
+  - https://github.com/giantswarm/datadog-app
   - https://app.datadoghq.com/account/settings#agent/kubernetes
   - https://github.com/DataDog/datadog-agent
 dependencies:
@@ -17,5 +20,7 @@ dependencies:
     version: 2.37.6
     repository: https://helm.datadoghq.com
 maintainers:
-  - name: Datadog
-    email: support@datadoghq.com
+  - name: giantswarm/team-atlas
+    email: team-atlas@giantswarm.io
+annotations:
+  application.giantswarm.io/team: atlas
